添加打印日志；配置注册中心地址

--- a/spring-cloud-client/src/main/resources/application.properties
+++ b/spring-cloud-client/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-server.port=7070
+server.port=7071
 #\u4E3A\u4F60\u7684\u5E94\u7528\u8D77\u4E2A\u540D\u5B57\uFF0C\u8BE5\u540D\u5B57\u5C06\u6CE8\u518C\u5230eureka\u6CE8\u518C\u4E2D\u5FC3
 spring.application.name=cloud-client
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
