--- a/spring-cloud-server/src/main/resources/application.properties
+++ b/spring-cloud-server/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8761
 eureka.client.registerWithEureka=false
 #\u4E3Atrue\u65F6\uFF0C\u53EF\u4EE5\u542F\u52A8\uFF0C\u4F46\u62A5\u5F02\u5E38\uFF1ACannot execute request on any known server
 eureka.client.fetchRegistry=false
+
+eureka.server.enable-self-preservation=false
+eureka.server.eviction-interval-timer-in-ms=5000
+
+logging.level.root=WARN
