--- a/spring-cloud-client/src/main/resources/application.properties
+++ b/spring-cloud-client/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7071
 #\u4E3A\u4F60\u7684\u5E94\u7528\u8D77\u4E2A\u540D\u5B57\uFF0C\u8BE5\u540D\u5B57\u5C06\u6CE8\u518C\u5230eureka\u6CE8\u518C\u4E2D\u5FC3
-spring.application.name=cloud-client
+spring.application.name=provider
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
@@ -9,3 +9,7 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 
 #\u79DF\u671F\u5230\u671F\u65F6\u95F4\uFF08\u9ED8\u8BA490\u79D2\uFF09\u670D\u52A1\u6CE8\u518C\u5173\u95ED\u5237\u65B0\u65F6\u95F4\u8BBE\u7F6E
 eureka.instance.lease-expiration-duration-in-seconds=1
+
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+spring.cloud.config.profile=dev
