修改config客服端的application为bootstrap，修复客服端不能注入name的bug

--- a/spring-cloud-client/src/main/resources/bootstrap.properties
+++ b/spring-cloud-client/src/main/resources/bootstrap.properties
@@ -5,10 +5,10 @@ spring.application.name=provider
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #\u79DF\u671F\u66F4\u65B0\u65F6\u95F4\u95F4\u9694\uFF08\u9ED8\u8BA430\u79D2\uFF09
-eureka.instance.lease-renewal-interval-in-seconds=10
+#eureka.instance.lease-renewal-interval-in-seconds=10
 
 #\u79DF\u671F\u5230\u671F\u65F6\u95F4\uFF08\u9ED8\u8BA490\u79D2\uFF09\u670D\u52A1\u6CE8\u518C\u5173\u95ED\u5237\u65B0\u65F6\u95F4\u8BBE\u7F6E
-eureka.instance.lease-expiration-duration-in-seconds=1
+#eureka.instance.lease-expiration-duration-in-seconds=1
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
