--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -5,5 +5,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # git\u4ED3\u5E93\u914D\u7F6E
 spring.cloud.config.server.git.uri=https://github.com/GhostGod/spring-cloud-demo/
 spring.cloud.config.server.git.searchPaths=spring-cloud-config-server/config-repo
-spring.cloud.config.server.git.username=745089707@qq.com
+spring.cloud.config.server.git.username=username
 spring.cloud.config.server.git.password=password
