实现注册中心高可用

--- a/spring-cloud-server/src/main/resources/application.properties
+++ b/spring-cloud-server/src/main/resources/application.properties
@@ -1,10 +1,1 @@
-server.port=8761
-#\u662F\u5426\u5C06eureka\u81EA\u8EAB\u4F5C\u4E3A\u5E94\u7528\u6CE8\u518C\u5230eureka\u6CE8\u518C\u4E2D\u5FC3
-eureka.client.registerWithEureka=false
-#\u4E3Atrue\u65F6\uFF0C\u53EF\u4EE5\u542F\u52A8\uFF0C\u4F46\u62A5\u5F02\u5E38\uFF1ACannot execute request on any known server
-eureka.client.fetchRegistry=false
-
-eureka.server.enable-self-preservation=false
-eureka.server.eviction-interval-timer-in-ms=5000
-
-logging.level.root=WARN
+spring.profiles.active=node3
