--- a/spring-cloud-client/src/main/resources/bootstrap.properties
+++ b/spring-cloud-client/src/main/resources/bootstrap.properties
@@ -13,3 +13,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 spring.cloud.config.profile=dev
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
