--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -3,7 +3,12 @@ server.port=7001
 # \u914D\u7F6E\u670D\u52A1\u6CE8\u518C\u4E2D\u5FC3
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # git\u4ED3\u5E93\u914D\u7F6E
-spring.cloud.config.server.git.uri=https://github.com/GhostGod/spring-cloud-demo/
+spring.cloud.config.server.git.uri=file:///C:/Users/liuyang1/git/spring-cloud-demo/
 spring.cloud.config.server.git.searchPaths=spring-cloud-config-server/config-repo
 spring.cloud.config.server.git.username=username
 spring.cloud.config.server.git.password=password
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
